[package]
name = "amnz"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
gbdt = "0.1.3"
ndarray = "0.17.2"
rayon = "1.11.0"
smartcore = { version = "0.4.9", features = ["ndarray-bindings"] }
xgb = { version = "3", default-features = false, features = ["local_build"] }
burn = { version = "0.19.1", features = ["train", "vision", "network", "cpu", "cuda", "ndarray", "wgpu", "dataset", "std", "autodiff", "fusion", "store", "metrics"] }
linfa-linear = "0.8.1"
linfa = "0.8.1"
linfa-elasticnet = "0.8.1"
ndarray-csv = "0.5.4"
textdistance = "1.1.1"
editdistancek = "1.0.2"
editdistancewf = "0.2.0"
text-similarity-metrics = "0.1.0"
